# ai-portfolio-dashboard

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  resume_physical.md
backend/: .dockerignore  Dockerfile  pyproject.toml  railway.json  render.yaml  requirements.txt  run.py
backend/scripts/: populate_database.py  populate_personality_data.py  populate_resume_data.py  update_resume_data.py
backend/src/: __init__.py  main.py  schema.sql
backend/src/agents/: __init__.py  agent_utils.py  background.py  base.py  help.py  interview.py  personal.py  prompt_config.py  router.py  technical.py  workflow.py
backend/src/nodes/: __init__.py  auth.py
backend/src/routes/: admin.py  chat.py  sql_demo.py
backend/src/shared/: __init__.py
backend/src/shared/nodes/: __init__.py  ai_analyzers.py  api_connectors.py  data_processors.py
backend/src/shared/utils/: __init__.py  config.py  logging.py  validation.py
backend/src/solutions/: __init__.py
backend/src/solutions/resume_dashboard/: main.py
backend/src/solutions/resume_dashboard/agents/: background.py  help.py
backend/src/solutions/resume_dashboard/routes/: __init__.py  admin.py  chat.py
backend/src/solutions/resume_dashboard/utils/: __init__.py  domain_validator.py  embeddings.py  resume_queries.py
backend/src/utils/: config.py  database.py  embeddings.py
backend/templates/: admin_analytics.html
backend/tests/: README.md  __init__.py  conftest.py  test_agents.py  test_agents_integration.py  test_router.py  test_router_integration.py
(+24 files in other folders)
